--- a/Flix/Base.lproj/Main.storyboard
+++ b/Flix/Base.lproj/Main.storyboard
@@ -164,7 +164,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" id="mJx-pE-6lh">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="526"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ghB-zH-SGu">
@@ -174,7 +174,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <activityIndicatorView key="backgroundView" hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" id="EU4-V3-uzj">
-                                    <rect key="frame" x="0.0" y="-64" width="320" height="526"/>
+                                    <rect key="frame" x="0.0" y="-64" width="320" height="568"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <color key="color" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 </activityIndicatorView>
@@ -194,16 +194,17 @@
                                         </view>
                                         <connections>
                                             <outlet property="posterImage" destination="XVj-XO-zFj" id="Ol4-tS-j1W"/>
+                                            <segue destination="EoE-mt-m3U" kind="push" id="XUo-hA-9dS"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="center" misplaced="YES" id="65w-7B-UYv">
-                                <rect key="frame" x="0.0" y="526" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="524" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <items>
                                     <barButtonItem style="plain" id="gLA-lN-7Tr">
-                                        <button key="customView" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="1Fq-hg-oAJ">
+                                        <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="1Fq-hg-oAJ">
                                             <rect key="frame" x="16" y="7" width="287" height="30"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <state key="normal" title="Dismiss"/>
@@ -222,12 +223,13 @@
                     </navigationItem>
                     <connections>
                         <outlet property="activityIndicator" destination="EU4-V3-uzj" id="y0O-5L-dpI"/>
+                        <outlet property="dismissButton" destination="gLA-lN-7Tr" id="FiU-WG-y0i"/>
                         <outlet property="relatedPosters" destination="mJx-pE-6lh" id="zJV-uT-3Xg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AwN-JO-M2m" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1845" y="1812"/>
+            <point key="canvasLocation" x="707" y="1812"/>
         </scene>
         <!--Now Playing-->
         <scene sceneID="fqE-3H-NGb">
@@ -358,7 +360,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="51s-Jx-hb4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1267" y="1812"/>
+            <point key="canvasLocation" x="1465" y="1554"/>
         </scene>
     </scenes>
     <resources>
@@ -371,6 +373,6 @@
         <simulatedScreenMetrics key="destination" type="retina4_0.fullscreen"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="wV9-go-fmJ"/>
+        <segue reference="XUo-hA-9dS"/>
     </inferredMetricsTieBreakers>
 </document>
